<resources>    <string name="app_name">AppTracNghiem</string>    <string name="navigation_drawer_open">Open navigation drawer</string>    <string name="navigation_drawer_close">Close navigation drawer</string>    <string name="nav_header_title">Android Studio</string>    <string name="nav_header_subtitle">android.studio@android.com</string>    <string name="nav_header_desc">Navigation header</string>    <string name="action_settings">Settings</string>    <!-- TODO: Remove or change this placeholder text -->    <string name="hello_blank_fragment">OOP testing</string>    <string name="oops_concept_fragment">type 1</string>    <string name="type01">Questions and Answers on OOPs Concept and Features</string>    <string name="type02">Questions and Answers on OOPs Concept and Features</string>    <string name="type03">Questions and Answers on OOPs Concept and Features</string>    <string name="type04">Questions and Answers on OOPs Concept and Features</string>    <string name="type05">Questions and Answers on OOPs Concept and Features</string>    <string name="type06">Questions and Answers on OOPs Concept and Features</string>    <string name="type07">Questions and Answers on OOPs Concept and Features</string>    <string name="type08">Questions and Answers on OOPs Concept and Features</string>    <string name="type09">Questions and Answers on OOPs Concept and Features</string>    <string name="type10">Questions and Answers on OOPs Concept and Features</string>    <string name="type11">Questions and Answers on OOPs Concept and Features</string>    <string name="type12">Questions and Answers on OOPs Concept and Features</string>    <string name="type13">Questions and Answers on OOPs Concept and Features</string></resources>