<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    tools:showIn="navigation_view">    <group android:checkableBehavior="single">        <item            android:id="@+id/home"            android:icon="@drawable/home"            android:title="Home" />    </group>    <item android:title="Type">        <menu>            <group android:checkableBehavior="single">                <item                    android:id="@+id/type01"                    android:icon="@drawable/cauhoi"                    android:title="@string/type01" />                <item                    android:id="@+id/type02"                    android:icon="@drawable/cauhoi"                    android:title="@string/type02" />                <item                    android:id="@+id/type03"                    android:icon="@drawable/cauhoi"                    android:title="@string/type03" />                <item                    android:id="@+id/type04"                    android:icon="@drawable/cauhoi"                    android:title="@string/type04" />                <item                    android:id="@+id/type05"                    android:icon="@drawable/cauhoi"                    android:title="@string/type05" />                <item                    android:id="@+id/type06"                    android:icon="@drawable/cauhoi"                    android:title="@string/type06" />                <item                    android:id="@+id/type07"                    android:icon="@drawable/cauhoi"                    android:title="@string/type07" />                <item                    android:id="@+id/type08"                    android:icon="@drawable/cauhoi"                    android:title="@string/type08" />                <item                    android:id="@+id/type09"                    android:icon="@drawable/cauhoi"                    android:title="@string/type09" />                <item                    android:id="@+id/type10"                    android:icon="@drawable/cauhoi"                    android:title="@string/type10" />                <item                    android:id="@+id/type11"                    android:icon="@drawable/cauhoi"                    android:title="@string/type11" />                <item                    android:id="@+id/type12"                    android:icon="@drawable/cauhoi"                    android:title="@string/type12" />                <item                    android:id="@+id/type13"                    android:icon="@drawable/cauhoi"                    android:title="@string/type13" />            </group>        </menu>    </item></menu>